tests/error_display/hll_defer_reject_break.err.expected
error: at 12:17: [HTC-ControlFlowInDefer] In function 'defer_break': break is not allowed inside defer
    |
 12 |         defer { break; };
    |                 ^^^^^
